--- a/isl-interpreter-extension/manifest.json
+++ b/isl-interpreter-extension/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "ISL Real-time Interpreter",
   "version": "1.0.0",
-  "description": "Real-time Indian Sign Language interpreter for video calls",
+  "description": "Real-time Indian Sign Language interpreter for video calls using MediaPipe and TensorFlow.js",
  
   "permissions": [
     "activeTab",
@@ -12,7 +12,9 @@
  
   "host_permissions": [
     "https://meet.google.com/*",
-    "https://*.zoom.us/*"
+    "https://*.zoom.us/*",
+    "http://localhost:5000/*",
+    "http://127.0.0.1:5000/*"
   ],
  
   "background": {
@@ -21,7 +23,7 @@
  
   "content_scripts": [
     {
-      "matches": ["https://meet.google.com/*"],
+      "matches": ["https://meet.google.com/*", "https://*.zoom.us/*"],
       "js": ["content.js"],
       "run_at": "document_end"
     }
@@ -48,13 +50,17 @@
       "resources": [
         "*.js", 
         "*.css", 
+        "injector.js",
         "video-processor.js",
         "mediapipe-hands.js",
-        "https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.4.1646424915/hands.js",
-        "https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils@0.3.1640029074/camera_utils.js",
-        "https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils@0.3.1620248257/drawing_utils.js"
+        "models/*",
+        "models/model/*"
       ],
-      "matches": ["https://meet.google.com/*"]
+      "matches": ["https://meet.google.com/*", "https://*.zoom.us/*"]
     }
-  ]
+  ],
+  
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
+  }
 }
